--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
   },
   "homepage": "https://github.fcom/Scarg/vue-swipeable#readme",
   "devDependencies": {
-    "tslint": "^5.20.1",
-    "typescript": "^3.7.4",
-    "@types/vue": "^2.0.0"
+    "@types/vue": "^2.0.0",
+    "standard-version": "^9.0.0",
+    "tslint": "^6.1.3",
+    "typescript": "^3.7.4"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
